@@ -1,6 +1,9 @@
 devel
 -----
 
+* Added handling of requests with Transfer-Encodign chunked, which is 
+  not implemented, so returns code HTTP code 501.
+
 * Add progress reporting to RocksDB WAL recovery, in case there are many WAL
   files to recover.
 
